cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode main.cpp Algorithm/1.double_pointer/double_pointer.h Helper.h Algorithm/2.my_sort/my_sort.h DS/5.String/DS_String.h Algorithm/3.greedy/greedy.h Algorithm/4.binary_search/binary_search.h Algorithm/5.divide/divide.h Algorithm/6.search/search.h Algorithm/7.DP/dp.h Algorithm/8.my_math/my_math.h DS/3.arrayList/ArrayList.h DS/1.linkedList/My_LinkedList.h DS/4.hashTable/HashTable.h DS/8.bit_calculating/bit_calculate.h DS/6.arrays/Arrays.h DS/7.graph/Graph.h DS/2.tree/MyTree.h Alibaba.h Tencent_1_1.h Bytedance/Commercial_Advertising.h codeTop.h learn/shared.h Tencent/Wxg_db_1.h Tencent/Wxg_db_2.h)